Server skeleton added.

--- a/QTClient/Client/CMakeLists.txt
+++ b/QTClient/Client/CMakeLists.txt
@@ -31,6 +31,8 @@ set(PROJECT_SOURCES
         main.cpp
         mainwindow.cpp
         mainwindow.h
+        overview.cpp
+        overview.h
         mainwindow.ui
 )
 
