--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,5 @@
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 3.9)
 project(wealth_manager)
 
+add_subdirectory(Server)
 add_subdirectory(QTClient/Client)
