Client & Server Wired.

--- a/QTClient/Client/CMakeLists.txt
+++ b/QTClient/Client/CMakeLists.txt
@@ -26,6 +26,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 find_package(QT NAMES Qt6 Qt5 COMPONENTS Widgets REQUIRED)
 find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Widgets REQUIRED)
+find_package(Qt5Network REQUIRED)
 
 set(PROJECT_SOURCES
         main.cpp
@@ -33,6 +34,7 @@ set(PROJECT_SOURCES
         mainwindow.h
         overview.cpp
         overview.h
+        constants.h
         mainwindow.ui
 )
 
@@ -52,4 +54,4 @@ else()
     endif()
 endif()
 
-target_link_libraries(Client PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+target_link_libraries(Client PRIVATE Qt${QT_VERSION_MAJOR}::Widgets Qt5::Network)
