--- a/Server/src/CMakeLists.txt
+++ b/Server/src/CMakeLists.txt
@@ -1,7 +1,14 @@
 project(Server)
 
-find_package(cpprestsdk CONFIG REQUIRED)
-find_package(Boost COMPONENTS filesystem system REQUIRED)
+find_package(cpprestsdk CONFIG REQUIRED) 
+
+if(!MSVC)
+    find_package(Boost COMPONENTS filesystem system REQUIRED)
+endif()
 
 add_executable(server main.cpp)
-target_link_libraries(server PRIVATE boost_system cpprestsdk::cpprest)
+target_link_libraries(server PRIVATE cpprestsdk::cpprest)
+
+if(!MSVC)
+    target_link_libraries(server PRIVATE boost_system)
+endif()
