common library added.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,10 @@
 cmake_minimum_required(VERSION 3.9)
 project(wealth_manager)
 
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
+
+
+add_subdirectory(Common)
 add_subdirectory(Server)
 add_subdirectory(QTClient/Client)
