3rdParty build taken out of main build.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,14 +4,12 @@ project(wealth_manager)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-message("C1 :" ${CMAKE_SOURCE_DIR})
-# set(THIRD_PARTY_INSTALL_DIR "${CMAKE_SOURCE_DIR}/Build.3rdParty/Install" CACHE STRING "Directory that contains the built 3rd party libraries.")
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/cmake)
-message("XXXXXXXXXXXXXXXXX module path: " ${CMAKE_MODULE_PATH})
-find_package(CppRest REQUIRED)
-# find_package(cpprestsdk CONFIG REQUIRED) 
 
-add_subdirectory(3rdParty)
+find_package(CppRest REQUIRED)
+find_package(Boost REQUIRED COMPONENTS system)
+find_package(OpenSSL REQUIRED)
+
 add_subdirectory(Common)
 add_subdirectory(Server)
 add_subdirectory(QTClient/Client)
