--- a/3rdParty/CMakeLists.txt
+++ b/3rdParty/CMakeLists.txt
@@ -1,13 +1,5 @@
 
-project(cpprestsdk)
-
-set(BUILD_TESTS OFF CACHE INTERNAL "overwrite cpprestSDK value")
-set(BUILD_SAMPLES OFF CACHE INTERNAL "overwrite cpprestSDK value")
+cmake_minimum_required(VERSION 3.9)
+project(3rdParty)
 
 add_subdirectory(cpprestsdk)
-
-# Overwrite OUTPUT_NAME set directly in cpprestsdk, which contains the version numbers
-set_target_properties(cpprest PROPERTIES
-  OUTPUT_NAME "cpprest"
-  DEBUG_POSTFIX "d"
-) 
