user change password implemented

--- a/Common/CMakeLists.txt
+++ b/Common/CMakeLists.txt
@@ -1,4 +1,7 @@
 cmake_minimum_required(VERSION 3.9)
 project(lib_common)
 
-add_library(lib_common STATIC uri.h place_holder.cpp)
+add_library(lib_common STATIC 
+			DTO/user.h
+			uri.h
+			place_holder.cpp)
