--- a/Server/src/CMakeLists.txt
+++ b/Server/src/CMakeLists.txt
@@ -7,6 +7,7 @@ if(!MSVC)
 endif()
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../Common)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../Common/DTO)
 
 set(PROJECT_SOURCES
 main.cpp
