Front end investments added.

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@
 QTClient/build-Client-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/*
 build/*
 QTClient/Client/CMakeLists.txt.user
+QTClient/Client/CMakeLists.txt.user
