Using C++17 and removing table on form

--- a/Common/CMakeLists.txt
+++ b/Common/CMakeLists.txt
@@ -1,6 +1,10 @@
 cmake_minimum_required(VERSION 3.9)
 project(lib_common)
 
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+
 add_library(lib_common STATIC 
 			DTO/user.h
 			DTO/investments.h 
