--- a/Server/src/CMakeLists.txt
+++ b/Server/src/CMakeLists.txt
@@ -23,6 +23,8 @@ investmentsmanager.h
 investmentsmanager.cpp
 investmentsmanager_facade.h
 investmentsmanager_facade.cpp
+investmentsrepository.h
+investmentsrepository.cpp
 )
 
 
