--- a/Server/src/CMakeLists.txt
+++ b/Server/src/CMakeLists.txt
@@ -25,6 +25,8 @@ investmentsmanager_facade.h
 investmentsmanager_facade.cpp
 investmentsrepository.h
 investmentsrepository.cpp
+currencyconverter.h
+currencyconverter.cpp
 )
 
 
