build issues fixed.

--- a/Server/CMakeLists.txt
+++ b/Server/CMakeLists.txt
@@ -4,4 +4,6 @@ project(Management_Server)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR/bin})
+
 add_subdirectory(src)
